# nifty_backtest

./: .gitignore  README.md  app.py  credentials.example.yaml  environment.yml  pyproject.toml  requirements.txt
nifty_backtest/: __init__.py  backtest.py  cache.py  config.py  models.py  strategy.py
nifty_backtest/providers/: base.py  groww.py  upstox.py
tests/: test_backtest.py  test_config.py  test_strategy.py  test_streamlit_secrets.py
