[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nifty-backtest"
version = "0.1.0"
description = "Streamlit backtester for NIFTY weekly expiry options"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "growwapi==1.5.0",
  "ipykernel==6.30.1",
  "pandas==2.2.3",
  "plotly==6.5.2",
  "pyarrow==21.0.0",
  "PyYAML==6.0.3",
  "requests==2.32.5",
  "streamlit==1.55.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["nifty_backtest*"]
